implement refresh token handling with Redis integration

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,12 @@
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=SmartTaskDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
-    "Key": "super-secret-key-that-is-long-enough-123!", 
+    "Key": "supersecretkey123456789",
     "Issuer": "SmartTaskAPI",
-    "Audience": "SmartTaskClient"
-  } 
+    "Audience": "SmartTaskAPIUsers",
+    "RefreshTokenExpiryDays": 7
+  },
+  "Redis": {
+    "Connection": "localhost:6379"
+  }
 }
