implement soft delete for task items

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=SmartTaskDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Jwt": {
-    "Key": "supersecretkey123456789",
+    "Key": "dsh38sdj2!@#sda!sdfas88*7723sdd21",
     "Issuer": "SmartTaskAPI",
     "Audience": "SmartTaskAPIUsers",
     "RefreshTokenExpiryDays": 7
